[package]
name = "park-importer"
version = "0.1.0"
authors = ["Marco Napetti <marco.napetti@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true

[dependencies]
tokio = { version = "0.2", features = ["full"] }
futures-util = "0.3"
hyper = { version = "0.13", features = ["stream"] }
hyper-tls = "0.4"
once_cell = "1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
mysql_async = "0.21"
env_logger = "0.7"
geo = { version = "0.12", features = ["use-serde"] }
geo-raycasting = "0.1"
